--- a/views/fun.html
+++ b/views/fun.html
@@ -6,28 +6,26 @@
     <meta name="description" content="Your name professional website">
     <title>Your name</title>
 </head>
-<body style="font-family: Arial">
-    <header style="color:blue; background:lightblue">
+<body>
+    <header>
         <h1>Nihitha Sunil</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="views/cv.html">CV</a>
             <a href="views/contact.html">Contact Me</a>
             <a href="views/fun.html">For Fun</a>
-        </nav>      
-        
+        </nav>
         
     </header>
     <div class="main">
-        <h2>Hi, my name is Nihitha</h2>
-        <img src="static/myphoto.jpeg" alt="A picture of me">
-        <p id="intro">Welcome to my personal website! My name is Nihitha Sunil and I am studying Information Systems and Business Administration at Carnegie Mellon University. Here you will find my CV, contact information, and fun things about me.</p>
-
-    </div>  
-
+        <h2>Things I like to do for fun</h2>
+        <li>Playing basketball</li>
+        <li>Reading Books</li>
+        <li>Trying new cusines</li>
+    </div>        
     <footer>
-            <p>© 2025 designed and coded by Nihitha Sunil.</p>
-        </footer>
+        <p>© 2025 designed and coded by Nihitha Sunil.</p>
+    </footer>
     
 </body>
 </html>
