--- a/views/contact.html
+++ b/views/contact.html
@@ -10,11 +10,11 @@
     <header>
         <h1>Nihitha Sunil</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="views/cv.html">CV</a>
-            <a href="views/contact.html">Contact Me</a>
-            <a href="views/fun.html">For Fun</a>
-        </nav>
+            <a href="../index.html">Home</a>
+            <a href="cv.html">CV</a>
+            <a href="contact.html">Contact Me</a>
+            <a href="fun.html">For Fun</a>
+        </nav>        
     </header>
     <div class="main">
         <h2>Contact Me</h2>
