fixed resume link and image size

--- a/views/cv.html
+++ b/views/cv.html
@@ -27,7 +27,7 @@
             <th>Description</th>
         </tr>
     </table>
-    <a href="static/resume.pdf" target="_blank">My Resume (PDF)</a>
+    <a href="../static/resume.pdf" target="_blank">My Resume (PDF)</a>
 
     <footer>
         <p>© 2025 designed and coded by Nihitha Sunil.</p>
