--- a/views/contact.html
+++ b/views/contact.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="author" content="Your name">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Your name professional website">
@@ -8,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Nihitha Sunil</h1>
+        <h1 id="webname">Nihitha Sunil</h1>
         <nav>
             <a href="../index.html">Home</a>
             <a href="cv.html">CV</a>
