--- a/views/contact.html
+++ b/views/contact.html
@@ -14,22 +14,22 @@
     <header>
         <h1 id="webname">Nihitha Sunil</h1>
         <nav>
-            <a href="../index.html">Home</a>
-            <a href="cv.html">CV</a>
-            <a href="contact.html">Contact Me</a>
-            <a href="fun.html">For Fun</a>
-        </nav>        
+            <a class="nav-links" href="../index.html">Home</a> |
+            <a class="nav-links" href="cv.html">CV</a> |
+            <a class="nav-links" href="contact.html">Contact Me</a> |
+            <a class="nav-links" href="fun.html">For Fun</a>
+        </nav>       
     </header>
     <div class="main">
         <h2>Contact Me</h2>
         <form>
-            <label for="name">Name:</label>
+            <label for="name">Your name (required):</label>
             <input type="text" id="name" name="name" required>
             
-            <label for="email">Email:</label>
+            <label for="email">Your email:</label>
             <input type="email" id="email" name="email" required>
             
-            <label for="comment">Comment:</label>
+            <label for="comment">Your comment:</label>
             <textarea id="comment" name="comment" required></textarea>
             
             <button type="submit">Submit</button>
@@ -37,16 +37,24 @@
 
         <table border="1">
             <tr>
-                <th>Contact Method Description</th>
+                <th>Contact Method</th>
+                <th>Contact Information</th>
             </tr>
             <tr>
+                <td>Email</td>
                 <td>nsunil@andrew.cmu.edu</td>
             </tr>
             <tr>
+                <td>Phone</td>
                 <td>(848)-270-2693</td>
             </tr>
             <tr>
-                <td> https://www.linkedin.com/in/nihitha-sunil/ </td>
+                <td>LinkedIn</td>
+                <td>
+                    <a href="https://www.linkedin.com/in/nihitha-sunil/" target="_blank">
+                        https://www.linkedin.com/in/nihitha-sunil/
+                    </a>
+                </td>
             </tr>
         </table>
     </div>        
