--- a/views/cv.html
+++ b/views/cv.html
@@ -14,11 +14,11 @@
     <header>
         <h1 id="webname">Nihitha Sunil</h1>
         <nav>
-            <a href="../index.html">Home</a>
-            <a href="cv.html">CV</a>
-            <a href="contact.html">Contact Me</a>
-            <a href="fun.html">For Fun</a>
-        </nav>        
+            <a class="nav-links" href="../index.html">Home</a> |
+            <a class="nav-links" href="cv.html">CV</a> |
+            <a class="nav-links" href="contact.html">Contact Me</a> |
+            <a class="nav-links" href="fun.html">For Fun</a>
+        </nav>       
         
     </header>
 
@@ -29,6 +29,22 @@
         <tr>
             <th>Name</th>
             <th>Description</th>
+        </tr>
+        <tr>
+            <td>Education</td>
+            <td>Carnegie Mellon University - Information Systems</td>
+        </tr>
+        <tr>
+            <td>Experience</td>
+            <td>Artificial Intelligence Intern at ThirdAi </td>
+        </tr>
+        <tr>
+            <td>Skills</td>
+            <td>Python, C, SQL, HTML, CSS, javascript, Ruby, R</td>
+        </tr>
+        <tr>
+            <td>Projects</td>
+            <td>Web Development Portfolio</td>
         </tr>
     </table>
     <a href="../static/resume.pdf" target="_blank">My Resume (PDF)</a>
