--- a/views/fun.html
+++ b/views/fun.html
@@ -14,10 +14,10 @@
     <header>
         <h1 id="webname">Nihitha Sunil</h1>
         <nav>
-            <a href="../index.html">Home</a>
-            <a href="cv.html">CV</a>
-            <a href="contact.html">Contact Me</a>
-            <a href="fun.html">For Fun</a>
+            <a class="nav-links" href="../index.html">Home</a> |
+            <a class="nav-links" href="cv.html">CV</a> |
+            <a class="nav-links" href="contact.html">Contact Me</a> |
+            <a class="nav-links" href="fun.html">For Fun</a>
         </nav>        
         
     </header>
