--- a/lab1/views/contact.html
+++ b/lab1/views/contact.html
@@ -19,13 +19,13 @@
     <div class="main">
         <h2>Contact Me</h2>
         <form>
-            <label for="name">Name:</label>
+            <label for="name">Your name (required):</label>
             <input type="text" id="name" name="name" required>
             
-            <label for="email">Email:</label>
+            <label for="email">Your email:</label>
             <input type="email" id="email" name="email" required>
             
-            <label for="comment">Comment:</label>
+            <label for="comment">Your comment:</label>
             <textarea id="comment" name="comment" required></textarea>
             
             <button type="submit">Submit</button>
