--- a/views/fun.html
+++ b/views/fun.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Your name">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Your name professional website">
+    <script src="../static/script.js" defer></script>
     <title>Your name</title>
 </head>
 <body>
