--- a/lab2/views/fun.html
+++ b/lab2/views/fun.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Your name">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Your name professional website">
-    <script src="../static/script.js" defer></script>
     <title>Your name</title>
 </head>
 <body>
@@ -19,37 +18,15 @@
             <a class="nav-links" href="cv.html">CV</a> |
             <a class="nav-links" href="contact.html">Contact Me</a> |
             <a class="nav-links" href="fun.html">For Fun</a>
-        </nav>       
+        </nav>        
         
     </header>
-
     <div class="main">
-        <h2>Curriculum Vitae</h2>
+        <h2>Things I like to do for fun</h2>
+        <li>Playing basketball</li>
+        <li>Reading Books</li>
+        <li>Trying new cusines</li>
     </div>        
-    <table border="1">
-        <tr>
-            <th>Name</th>
-            <th>Description</th>
-        </tr>
-        <tr>
-            <td>Education</td>
-            <td>Carnegie Mellon University - Information Systems</td>
-        </tr>
-        <tr>
-            <td>Experience</td>
-            <td>Artificial Intelligence Intern at ThirdAi </td>
-        </tr>
-        <tr>
-            <td>Skills</td>
-            <td>Python, C, SQL, HTML, CSS, javascript, Ruby, R</td>
-        </tr>
-        <tr>
-            <td>Projects</td>
-            <td>Web Development Portfolio</td>
-        </tr>
-    </table>
-    <a href="../static/resume.pdf" target="_blank">My Resume (PDF)</a>
-
     <footer>
         <p>© 2025 designed and coded by Nihitha Sunil.</p>
     </footer>
