--- a/lab 4/views/cv.html
+++ b/lab 4/views/cv.html
@@ -11,7 +11,7 @@
     <script src="../static/script.js" defer></script>
     <title>Your name</title>
 </head>
-<body onload="addYear()">
+<body>
     <header>
         <h1 id="webname">Nihitha Sunil</h1>
         <nav>
@@ -51,7 +51,7 @@
     <a href="../static/resume.pdf" target="_blank">My Resume (PDF)</a>
 
     <footer>
-        <p id = "copyYear"> &copy; Designed and coded by Nihitha Sunil </p>
+        <p>© 2025 designed and coded by Nihitha Sunil.</p>
     </footer>
     
 </body>
