--- a/lab 4/views/contact.html
+++ b/lab 4/views/contact.html
@@ -11,7 +11,7 @@
     <script src="../static/script.js" defer></script>
     <title>Your name</title>
 </head>
-<body onload="addYear()">
+<body>
     <header>
         <h1 id="webname">Nihitha Sunil</h1>
         <nav>
@@ -30,8 +30,8 @@
             <label for="email">Your email:</label>
             <input type="email" id="email" name="email" required>
             
-            <label for="message">Your message:</label>
-            <textarea id="message" name="message" required></textarea>
+            <label for="comment">Your comment:</label>
+            <textarea id="comment" name="comment" required></textarea>
             
             <button type="submit">Submit</button>
         </form>
@@ -60,7 +60,7 @@
         </table>
     </div>        
     <footer>
-        <p id = "copyYear"> &copy; Designed and coded by Nihitha Sunil </p>
+        <p>© 2025 designed and coded by Nihitha Sunil.</p>
     </footer>
         
     
