--- a/lab1/views/contact.html
+++ b/lab1/views/contact.html
@@ -18,7 +18,7 @@
     </header>
     <div class="main">
         <h2>Contact Me</h2>
-        <form>
+        <form onsubmit="return validateForm(event)">
             <label for="name">Your name (required):</label>
             <input type="text" id="name" name="name" required>
             
