--- a/views/contact.html
+++ b/views/contact.html
@@ -21,20 +21,27 @@
             <a class="nav-links" href="fun.html">For Fun</a>
         </nav>       
     </header>
-    <div class="main">
-        <h2>Contact Me</h2>
-        <form>
-            <label for="name">Your name (required):</label>
-            <input type="text" id="name" name="name" required>
-            
-            <label for="email">Your email:</label>
-            <input type="email" id="email" name="email" required>
-            
-            <label for="message">Your message:</label>
-            <textarea id="message" name="message" required></textarea>
-            
-            <button type="submit">Submit</button>
-        </form>
+    <div class="mainLayout">
+        <div class="item1">
+            <h2>Find Me</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=..." width="300" height="200" style="border:0;" allowfullscreen loading="lazy"></iframe>
+        </div>
+        <div class="item2">
+            <h2>Contact Me</h2>
+            <form>
+                <label for="name">Your name (required):</label>
+                <input type="text" id="name" name="name" required>
+                
+                <label for="email">Your email:</label>
+                <input type="email" id="email" name="email" required>
+                
+                <label for="message">Your message:</label>
+                <textarea id="message" name="message" required></textarea>
+                
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+        
 
         <table border="1">
             <tr>
