--- a/static/style.css
+++ b/static/style.css
@@ -47,11 +47,11 @@ button {
   cursor: pointer;
 }
 
-#hiddenList {
+/* #hiddenList {
   display: none;
   list-style-type: square; 
   margin-top: 10px; 
-}
+} */
 
 #readMore, #readLess {
   color: blue;
@@ -60,4 +60,32 @@ button {
 
 #readMore:hover, #readLess:hover {
   color: darkblue;
+}
+
+.funIMG {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+}
+
+.container {
+  border-radius: 10%;
+  display: inline-block;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  padding: 15px;
+}
+
+.container button {
+  margin-top: 10px;
+}
+
+.mainLayout {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.item1, .item2, .item3, .item4 {
+  flex: 1 1 300px;
 }
